<resources>
    <string name="app_name">AirArabia</string>
    <string name="action_settings">Settings</string>
    <string name="seatSelected">seatSelected</string>
    <string name="seatRowNo">seatRowNo</string>
    <string name="hala_flight_tag">hala_flight_tag</string>
    <string name="hala_name_tag">hala_name_tag</string>
    <string name="hala_person_tag">hala_person_tag</string>
    <string name="hala_check_tag">hala_check_tag</string>
    <string name="seatNo">seatNo</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="loader_msg">Error.</string>
    <string name="InternetProblem">No Internet Connection Available. Please try again.</string>
    <string name="quantity">Qty:</string>
    <string name="no">No</string>
    <string name="all">All</string>
    <string name="No_Cities_Found">No city Found</string>
    <string name="Payment_Error">Payment Error</string>
    <string name="noData">Data not available.</string>
    <string name="alert_card_expirydate">Please enter card expiry date.</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="arabic">Arabic</string>
    <string name="russion">Russian</string>
    <string name="english_lang_code">English</string>
    <string name="french_lang_code">Français</string>
    <string name="arabic_lang_code">العربية</string>
    <string name="russion_lang_code">Russian</string>
    <string name="language">Language</string>
    <string name="donecal">Done</string>
    <string-array name="title_adt">
        <item>MR</item>
        <item>MRS</item>
        <item>MS</item>
    </string-array>
    <string-array name="title_chd">
        <item>MSTR</item>
        <item>MISS</item>
    </string-array>
    <string-array name="title_inf">
        <item>MSTR</item>
        <item>MISS</item>
    </string-array>
    <string-array name="title_adt_desc">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
    </string-array>
    <string-array name="title_chd_desc">
        <item>Master</item>
        <item>Miss</item>
    </string-array>
    <string-array name="title_inf_desc">
        <item>Master</item>
        <item>Miss</item>
    </string-array>
    <string-array name="lang">
        <item>English</item>
        <item>Arabic</item>
        <item>French</item>
        <item>Russian</item>
        <item>Spanish</item>
        <item>Italian</item>
        <item>Turkish</item>
    </string-array>
    <string-array name="passenger_type">
        <item>Adult</item>
        <item>Child</item>
        <item>Infant</item>
    </string-array>
    <string-array name="ArrMonth">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="ArrDays">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednessday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="ReturnDiscount">Return Booking Discount</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="Sunday">Sun</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tues</string>
    <string name="Wednessday">Wed</string>
    <string name="Thursday">Thurs</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="alert_msg_fill_all_fields">Please fill all the fields.</string>
    <string name="alert_msg_fill_all_fields_required_by_passenger">Please fill all passenger required fields.</string>
    <string name="alert_msg_fill_all_fields_required_by_passenger_info">Please fill all passenger required fields.</string>
    <string name="alert_msg_flight_cancelled">Your flight has been cancelled.</string>
    <string name="alert_msg_flight_not_cancelled">Your flight has not been cancelled, Please try again.</string>
    <string name="Cancel_Flight">CANCEL_FLIGHT</string>
    <string name="Select_Date">Select Date</string>
    <string name="Arriving">Arriving</string>
    <string name="AddServices">Add Services</string>
    <string name="Adult">Adult</string>
    <string name="adult_flight_summary">Adult</string>
    <string name="adult_flight_fareselection">Adult</string>
    <string name="Adultc">ADULT</string>
    <string name="selectDate">Select Date</string>
    <string name="selectDate_dep">Select Date</string>
    <string name="selectDate_return">Select Date</string>
    <string name="selectCurrency">Select Currency</string>
    <string name="rememberMe">Remember me</string>
    <string name="remembered">remembered</string>
    <string name="Best_Fare">Best Fare</string>
    <string name="Flight_Timing">Flight Timing</string>
    <string name="AdultChildCountErrorMessage">Invalid Adult and Children Count.</string>
    <string name="Arrival">Arrival</string>
    <string name="Baggage">Baggage</string>
    <string name="Baggages">Baggages</string>
    <string name="categoryClass">Class</string>
    <string name="BookAFlight">Book a flight</string>
    <string name="BookFlight">Book Flights</string>
    <string name="BookFlighta">Book Flight</string>
    <string name="CheckInOnline">Check-in</string>
    <string name="CheckInOnline_title">Check-In Online</string>
    <string name="register">Register</string>
    <string name="airewards">AIR REWARDS</string>
    <string name="Child">Child</string>
    <string name="Childc">CHILD</string>
    <string name="Childs">Childs</string>
    <string name="Child2to12Yrs">Child (2 to 12 yrs)</string>
    <string name="Continue">Continue</string>
    <string name="CopyRight">© 2013 Air Arabia. All rights reserved.</string>
    <string name="Country">Country:</string>
    <string name="Country_withoutColan">Country</string>
    <string name="CountryError">Please select country</string>
    <string name="ViewReservation">View Reservation</string>
    <string name="AddExtras">Add Extras</string>
    <string name="ModifyReservation">ModifyReservation</string>
    <string name="CancelReservation">Cancel Reservation</string>
    <string name="CancelBooking">Cancel Booking</string>
    <string name="ConfirmCancellation">Confirm Cancellation</string>
    <string name="Depart">Depart</string>
    <string name="Departing">Departing</string>
    <string name="Departing_depart">Departing</string>
    <string name="Departure">Departure</string>
    <string name="DaysOfOperation">Days of \nOperation</string>
    <string name="DestinationErrorMessage">Please select destination airport.</string>
    <string name="EmailId">Email Id</string>
    <string name="EmailIdError">Please enter vaild email-id.</string>
    <string name="EnterDetails">Enter Details</string>
    <string name="EnterYourReservationDetails">Enter your reservation details to load your booking:</string>
    <string name="EnterYourReservationDetails1">Please enter your reservation details.</string>
    <string name="Login_For_Faster_Booking">Login for faster booking</string>
    <string name="FirstName">First Name</string>
    <string name="FirstNameError">Please Enter first name</string>
    <string name="FlexiFare">Flexi fare</string>
    <string name="FlexiFare_details">Flexi fare detail</string>
    <string name="FlightNo">Flight No</string>
    <string name="FlightSchedule">Flight Schedule</string>
    <string name="FlightSummary">Flight Summary</string>
    <string name="TimeTable">Timetable</string>
    <string name="From">From</string>
    <string name="FlyingFrom">Flying from</string>
    <string name="FlyingTo">Flying to</string>
    <string name="IAccept">I accept the airline\'s</string>
    <string name="Inbound">Inbound</string>
    <string name="Infant">Infant</string>
    <string name="Infantc">INFANT</string>
    <string name="InfantBelow2Yrs">Infant (below 2 yrs)</string>
    <string name="InvalidEmail">Infant (below 2 yrs)Invalid Email Format</string>
    <string name="InvalidMobile">Invalid Mobile Number.</string>
    <string name="ISDError">Please Enter Country Code</string>
    <string name="ItMayTakeFewSeconds">It may take few seconds</string>
    <string name="LastName">Last Name</string>
    <string name="LastNameError">Please Enter Last Name</string>
    <string name="ContactPersonsLastName">Contact Person\'s Last Name</string>
    <string name="EnterContactPersonsLastName">Enter Contact Person\'s Last Name</string>
    <string name="Loading">Loading</string>
    <string name="ManageYourBooking">Manage your booking</string>
    <string name="MobileError_10_digit">Please enter your 10 digits modile number.</string>
    <string name="MobileError">Please enter your modile number.</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="ModifySearch">Modify Search</string>
    <string name="More">More</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Nationality">Nationality</string>
    <string name="NationalityError">Please Select Nationality</string>
    <string name="NoAirportsFound">No Airport Found.</string>
    <string name="Subject">Subject</string>
    <string name="Email">Email</string>
    <string name="Mobile">Mobile</string>
    <string name="ReservationNumber">Reservation Number</string>
    <string name="EnterReservationNumber">Enter Reservation Number</string>
    <string name="DepartureDate">Departure Date</string>
    <string name="EnterDepartureDate">Enter Departure Date</string>
    <string name="MessageError">Please Enter your Message</string>
    <string name="InsuranceP1_sub1">Any trip is incomplete without travel insurance...</string>
    <string name="InsuranceP1_sub2">Whether you\'re on a holiday or business trip, we want you to have a trip with peace of mind. Let us be the one to worry about your medical, emergency and travel inconvenience and all you need to do is purchase TUNE PROTECT PLATINUM travel insurance plan.</string>
    <string name="InsuranceLi1">USD 50,000 for Accidental and Sickness Medical Reimbursement</string>
    <string name="InsuranceLi2">USD 20,000 for Emergency Medical Evacuation &amp; Repatriation</string>
    <string name="InsuranceLi3">USD 3,000 for Travel Cancellation or Curtailment</string>
    <string name="InsuranceLi4">and more...</string>
    <string name="InsurancePurchaseYes">Yes, I would like to purchase travel insurance</string>
    <string name="email_us">Email Us</string>
    <string name="currency">Currency</string>
    <string name="registorinfo">Sign up in just one minute and start enjoying the benefits of the Most Generous Loyalty Program in the Region, Air Rewards"
</string>
    <string name="i_travel_mainly_from_to_via_UAE">I travel mainly from/to/via UAE</string>
    <string name="i_travel_mainly_from_to_via_Morocco">I travel mainly from/to/via Morocco</string>
    <string name="i_travel_mainly_from_to_via_Egypt">I travel mainly from/to/via Egypt</string>
    <string name="i_travel_mainly_from_to_via_Jordan">I travel mainly from/to/via Jordan</string>
    <string name="selectCountry">Select country</string>
</resources>