<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_book_flight"
    android:orientation="vertical"
    android:padding="@dimen/margin_normal" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_very_small"
        android:layout_marginRight="@dimen/margin_very_small"
        android:text="@string/Country_withoutColan"
        android:textColor="@color/text_color_red"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_very_small"
        android:layout_marginRight="@dimen/margin_very_small"
        android:hint="@string/selectCountry"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_gray"
        android:textSize="@dimen/text_size_large" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sep" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_very_small"
        android:layout_marginRight="@dimen/margin_very_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/language"
        android:textColor="@color/text_color_red"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/tvLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_very_small"
        android:layout_marginRight="@dimen/margin_very_small"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_large" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sep" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_very_small"
        android:layout_marginRight="@dimen/margin_very_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/currency"
        android:textColor="@color/text_color_red"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/tvCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_very_small"
        android:layout_marginRight="@dimen/margin_very_small"
        android:hint="@string/selectCurrency"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_gray"
        android:textSize="@dimen/text_size_large" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sep" />

</LinearLayout>